<resources>
    <string name="app_name">CourseWork</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="inn">ИНН: %s</string>
    <string name="addr">Юр. адрес: %s</string>
    <string name="phone">Тел. %s</string>
    <string name="delivery">Поставка №%d</string>
    <string name="date">Дата: %s</string>
    <string name="post">Должность: %s</string>
    <string name="order">Заказ №%d</string>
    <string name="client">Заказчик: %s</string>
    <string name="number">Кол-во: %d</string>
    <string name="price">Цена: %d ₽</string>
    <string name="state">Состояние: %s</string>
    <string name="id">ID: %d</string>
    <string name="rest">Остаток: %d</string>
    <string name="discount">Скидка: %d%%</string>
    <string name="in_stock">В наличии: %b</string>
    <string name="price_per_piece">Цена за шт.: %d</string>
    <string name="product">Товар №%d</string>
    <string name="hint_client_name">Название организации клиента</string>
    <string name="hint_inn">ИНН</string>
    <string name="hint_addr">Юр. адрес</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_email">Email</string>
    <string name="hint_product">Товар</string>
    <string name="hint_number">Количество</string>
    <string name="hint_price_per_piece">Цена за штуку</string>
    <string name="hint_supplier">Поставщик</string>
    <string name="hint_date">Дата</string>
    <string name="hint_full_name">ФИО</string>
    <string name="hint_post">Должность</string>
    <string name="hint_employee">Выполняющий сотрудник</string>
    <string name="hint_client">Заказчик</string>
    <string name="hint_price">Цена</string>
    <string name="hint_state">Состояние</string>
    <string name="hint_product_name">Название товара</string>
    <string name="hint_rest">Остаток</string>
    <string name="hint_discount">Скидка</string>
    <string name="hint_in_stock">В наличии</string>
    <string name="hint_supplier_name">Название организации поставщика</string>
    <string name="add">add_fab</string>
    <string name="done">done_fab</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
</resources>